# cpp_lib_skeleton

./: CMakeLists.txt
include/: example.h
src/: example.cc
